--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
             <% } else if (locals.user.role == 'client') { %>
                 <p><a href="/functionality/portfolio">Portfolio</a></p>
             <% } %>
-            <p><a href="#">Community Engagement</a></p>
+            <p><a href="/project/community-engagement">Projects</a></p>
         <% } %>
     </div>
     
