--- a/views/project_updates.ejs
+++ b/views/project_updates.ejs
@@ -4,6 +4,9 @@
             
             <input type="hidden" id="project_name" name="project_name" value="<%=project.name%>"> <br>
         
+            <label for="mode">Enter Mode</label>
+            <input type="text" id="mode" name="mode" placeholder="public/private"> <br>
+
             <label for="description">Description</label>
             <textarea placeholder="Enter small description of project" id="description" name="description" cols="50" rows="4">
             </textarea> <br>
