--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,5 +1,5 @@
 <div id="comment-container">
-    <% if(locals.user.role == 'client'){%> 
+    <% if(locals.user.role == 'client' || locals.user.role == 'community'){%> 
         <form action="/project/comments/create" method="post" id="new-comment-form">
             <textarea name="content" id="content" cols="30" rows="2" placeholder="Client can add Comments"></textarea>
             <input type="hidden" name="user_id" value="<%= user._id %>">
@@ -20,10 +20,15 @@
     
                         <%= comment.content %>
                         <br>
-    
                         <small>
                             <%=comment.user.name%>
-                        </small>
+                        </small> <br>
+                        <% if(mode == 'public'){%>
+                            <small> 
+                                <%=locals.user.role%>
+                            </small>
+                        <% } %>
+                       
                     </p>
                 </li>
             <% } %>
