--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <title><%=title%></title>
 
 <div id="main">
-    <p>Welcme to Rodic Consulting</p>
+    <p>Welcme to Rodic Consulting!</p>
     
     <div id="home_links">
         <% if(locals.user){
