--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,7 +2,7 @@
     <div id="title">Rodic360</div>
     <div id="menu">
         <a href="#">Weather</a>
-        <a href="#">Projects</a>
+        <a href="/project/community-engagement">Projects</a>
         <% if (locals.user) { %>
             <a href="/"><%=user.username%></a>
             <a href="/users/sign-out">LOGOUT</a>
