--- a/views/community_engagement.ejs
+++ b/views/community_engagement.ejs
@@ -1,4 +1,4 @@
-<ul id="project-contai">
+<ul id="project-container">
     <% for (project of projects) {%> 
         <li class="project" id="<%=project.id%>">
             <div class="project-image">
