--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,24 @@
 <footer>
-    Rodic Consulting &copy; 2023
-</footer>
+    <div class="footer-content">
+      <div class="footer-logo">
+        <img src="/images/RODIC-LOGO.png" alt="Rodic360 Logo">
+      </div>
+      <div class="footer-links">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About Us</a></li>
+          <li><a href="/project/community-engagement">Projects</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <a href="https://www.linkedin.com/in/dharmesh-kota-8a9810268/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Dharmesh-Kota" class="social-icon"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/dharmesh.2004/" class="social-icon"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2023 Rodic360. All rights reserved.</p>
+    </div>
+  </footer>
+  
