--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,7 +1,8 @@
 <nav>
-    <div id="title">Rodic360</div>
+    <div id="title"><img src="/images/RODIC-LOGO.png" alt=""></div>
     <div id="menu">
         <a href="#">Weather</a>
+        <a href="/">Home</a>
         <a href="/project/community-engagement">Projects</a>
         <% if (locals.user) { %>
             <a href="/"><%=user.username%></a>
