--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/_header.css">
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
-    <!-- <link rel="stylesheet" type="text/css" href="/css/_footer.css"> -->
+    <link rel="stylesheet" type="text/css" href="/css/_footer.css">
     <!-- <link rel="stylesheet" type="text/css" href="/css/blogs_footer.css"> -->
 
 
