--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,4 +1,26 @@
 nav{
     display: flex;
     justify-content: space-between;
+    height: 15vh;
+    align-items: center;
+    background-color: #f5f5f5;
+    #title{
+        img{
+            height: 7rem;
+            width: 10rem;
+        }
+    }
+    #menu{
+        margin-right: 1.5rem;
+        a{
+            text-decoration: none;
+            color: #000;
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-left: 1.2rem;
+        }
+        a:hover{
+            color: #d5833f;
+        }
+    }
 }
