Frontend Completed 80%. Only Responsiveness reamaining!

--- a/views/add_project.ejs
+++ b/views/add_project.ejs
@@ -1,4 +1,5 @@
 <title><%=title%></title>
+<link rel="stylesheet" href="/css/add_project.css">
 
 <div id="new-project-container">
     <form action="/functionality/new-project" method="post" enctype="multipart/form-data">
