--- a/views/community_engagement.ejs
+++ b/views/community_engagement.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/community.css">
+
 <ul id="project-container">
     <% for (project of projects) {%> 
         <li class="project" id="<%=project.id%>">
