--- a/views/project.ejs
+++ b/views/project.ejs
@@ -1,4 +1,5 @@
 <title><%=title%></title>
+<link rel="stylesheet" href="/css/project.css">
 
 <!-- Project Discription -->
 <div id="project-section">
