--- a/views/project_updates.ejs
+++ b/views/project_updates.ejs
@@ -1,4 +1,7 @@
+<link rel="stylesheet" href="/css/project_updates.css">
+
 <div id="project-updates-container">
+    <h2>Builder Upload Project Updates Here</h2> <!-- Added title section -->
     <%if(locals.user.role == 'builder') {%>
         <form action="/project/update" method="post" enctype="multipart/form-data">
             
@@ -18,6 +21,7 @@
         </form>
     <% } %>
     
+    <h2>Project Updates</h2>
     <ul id="images-container">
 
         <%for(update of updates) {%>
