--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,4 +1,5 @@
 <title><%=title%></title>
+<link rel="stylesheet" href="/css/sign_in.css">
 
 <div id="sign-in-container">
     <form action="/users/create-session" method="post">
