--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,4 +1,5 @@
 <title><%=title%></title>
+<link rel="stylesheet" href="/css/sign_up.css">
 
 <div id="sign-up-container">
     <form action="/users/new-user" method="post">
