--- a/assets/scss/community.scss
+++ b/assets/scss/community.scss
@@ -1,60 +1,70 @@
 /* Reset some default styling */
 body, p {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* General styling */
-  #project-container {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 0;
-    margin: 0;
-  
-    .project {
+  margin: 0;
+  padding: 0;
+}
+
+/* General styling */
+#project-container {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 0;
+  margin: 1.5rem;
+
+  .project {
       background-color: #fff;
       border-radius: 8px;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       width: calc(33.33% - 20px);
-  
+
       .project-image {
-        a {
-          display: block;
-          img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-          }
-        }
-      }
-  
-      .project-details {
-        padding: 20px;
-  
-        .project-name {
-          font-size: 18px;
-          margin-bottom: 10px;
-  
           a {
-            color: #007bff;
-            text-decoration: none;
-            transition: color 0.3s ease;
-  
-            &:hover {
-              color: #0056b3;
-            }
+              display: block;
+              img {
+                  width: 100%;
+                  height: auto;
+                  object-fit: cover;
+              }
           }
-        }
-  
-        .project-client,
-        .project-location {
-          font-size: 16px;
-          color: #444;
-        }
       }
-    }
+
+      .project-details {
+          padding: 20px;
+
+          .project-name {
+              font-size: 18px;
+              margin-bottom: 10px;
+
+              a {
+                  color: #007bff;
+                  text-decoration: none;
+                  transition: color 0.3s ease;
+
+                  &:hover {
+                      color: #0056b3;
+                  }
+              }
+          }
+
+          .project-client,
+          .project-location {
+              font-size: 16px;
+              color: #444;
+          }
+      }
   }
-  
+}
+
+@media (max-width: 768px) {
+  #project-container {
+      margin: 1.5rem 15px; // Adjust margin for better spacing on smaller screens
+  }
+
+  .project {
+      width: 100%; // Take up full width on smaller screens
+      margin-bottom: 20px; // Add spacing between projects
+  }
+}
