--- a/assets/scss/project.scss
+++ b/assets/scss/project.scss
@@ -1,40 +1,55 @@
-#project-section {
-display: flex;
-gap: 40px;
-margin-bottom: 40px;
+/* General styling */
+.project-section {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 40px;
 
-.project-image {
-    width: 300px; /* Adjust the width as needed */
-    flex-shrink: 0;
+    .project-image {
+        img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+    }
 
-    img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    .project-details {
+        margin-top: 20px;
+
+        .project-name {
+            font-size: 24px;
+            margin-bottom: 10px;
+
+            p {
+                color: #007bff;
+                margin: 0;
+            }
+        }
+
+        .project-budget,
+        .project-client,
+        .project-location,
+        .project-description {
+            font-size: 16px;
+            margin-bottom: 10px;
+            color: #444;
+        }
     }
 }
 
-.project-details {
-    flex: 1;
+@media (min-width: 768px) {
+    .project-section {
+        flex-direction: row;
 
-    .project-name {
-    font-size: 24px;
-    margin-bottom: 10px;
+        .project-image {
+            width: 300px;
+            margin: 1.5rem;
+            flex-shrink: 0;
+        }
 
-    p {
-        color: #007bff;
-        margin: 0;
-    }
-    }
-
-    .project-budget,
-    .project-client,
-    .project-location,
-    .project-description {
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: #444;
+        .project-details {
+            margin-top: 0;
+        }
     }
 }
-} 
