--- a/assets/scss/sign_in.scss
+++ b/assets/scss/sign_in.scss
@@ -1,71 +1,89 @@
-/* Reset some default styling */
-body, p {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* General styling */
-  #sign-in-container {
-    max-width: 400px;
-    margin: 1.5rem auto;
-    padding: 40px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
+/* General styling */
+#sign-in-container {
+  max-width: 400px;
+  margin: 1.5rem auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
   form {
-    label {
-      display: block;
-      font-weight: bold;
-      margin-top: 15px;
-    }
-  
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-  
-    button[type="submit"] {
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-  
-      &:hover {
-        background-color: #0056b3;
+      label {
+          display: block;
+          font-weight: bold;
+          margin-top: 10px;
       }
-    }
+
+      input[type="text"],
+      input[type="password"] {
+          width: 100%;
+          padding: 10px;
+          margin-top: 5px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+      }
+
+      button[type="submit"] {
+          background-color: #007bff;
+          color: #fff;
+          border: none;
+          border-radius: 4px;
+          padding: 10px 20px;
+          font-size: 16px;
+          cursor: pointer;
+          transition: background-color 0.3s ease;
+
+          &:hover {
+              background-color: #0056b3;
+          }
+      }
   }
-  
+
   #newUser {
-    margin-top: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    p {
-      font-size: 16px;
-      margin-right: 10px;
-    }
-  
-    a {
-      font-size: 16px;
-      color: #007bff;
-      text-decoration: none;
-      transition: color 0.3s ease;
-  
-      &:hover {
-        color: #0056b3;
+      margin-top: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      p {
+          font-size: 14px;
+          margin-right: 5px;
       }
-    }
+
+      a {
+          font-size: 14px;
+          color: #007bff;
+          text-decoration: none;
+          transition: color 0.3s ease;
+
+          &:hover {
+              color: #0056b3;
+          }
+      }
   }
-  
+}
+
+@media (min-width: 768px) {
+  #sign-in-container {
+      padding: 40px;
+
+      form {
+          label {
+              margin-top: 15px;
+          }
+      }
+
+      #newUser {
+          margin-top: 25px;
+
+          p {
+              font-size: 16px;
+              margin-right: 10px;
+          }
+
+          a {
+              font-size: 16px;
+          }
+      }
+  }
+}
