--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -12,9 +12,9 @@
         </ul>
       </div>
       <div class="footer-social">
-        <a href="https://www.linkedin.com/in/dharmesh-kota-8a9810268/" class="social-icon"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Dharmesh-Kota" class="social-icon"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/dharmesh.2004/" class="social-icon"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/dharmesh-kota-8a9810268/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Dharmesh-Kota" class="social-icon"><i class="fab fa-github" target="_blank"></i></a>
+        <a href="https://www.instagram.com/dharmesh.2004/" class="social-icon"><i class="fab fa-instagram" target="_blank"></i></a>
       </div>
     </div>
     <div class="footer-bottom">
