--- a/views/project.ejs
+++ b/views/project.ejs
@@ -30,3 +30,7 @@
 
 <!-- Comments Section -> Can be Entered by the Clients Only -->
 <%- include('./comments.ejs', {project: project, mode: mode, comments: comments})%>
+
+<div id="material-management">
+    <a href="/functionality/material-management">Material Management</a>
+</div>
