--- a/assets/scss/project.scss
+++ b/assets/scss/project.scss
@@ -38,6 +38,27 @@
     }
 }
 
+#material-management {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.5rem;
+    a {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+  
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+  }
+  
+
 @media (min-width: 768px) {
     .project-section {
         flex-direction: row;
