--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,31 @@
 <div id="main">
 
     <div id="welcome">
-        <p>We Revolutionize Infrastructure: <span>From Blueprints to Bytes</span></p>
+        <div class="welcome-text">
+            <p>We Revolutionize Infrastructure: <span>From Blueprints to Bytes</span></p>
+            <a href="/project/community-engagement" class="welcome-button">View Projects</a>
+        </div>
+    </div>    
+
+    <h2 id="cards-title">We are expert in this field</h2>
+    
+    <div id="cards">
+        <div class="card">
+            <h3>Professional Liability</h3>
+            <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
+        </div>
+        <div class="card">
+            <h3>Dedicated To Clients</h3>
+            <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
+        </div>
+        <div class="card">
+            <h3>Outstanding Services</h3>
+            <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
+        </div>
+        <div class="card">
+            <h3>Clients Satisfaction</h3>
+            <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
+        </div>
     </div>
     
     <div id="home_links">
