--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,24 +1,25 @@
 <footer>
-    <div class="footer-content">
+  <div class="footer-content">
       <div class="footer-logo">
-        <img src="/images/RODIC-LOGO.png" alt="Rodic360 Logo">
+          <img src="/images/RODIC-LOGO.png" alt="Rodic360 Logo">
       </div>
-      <div class="footer-links">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About Us</a></li>
-          <li><a href="/project/community-engagement">Projects</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>
+      <div class="footer-links-bottom">
+          <div class="footer-links">
+              <ul>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/about">About Us</a></li>
+                  <li><a href="/project/community-engagement">Projects</a></li>
+                  <li><a href="/contact">Contact</a></li>
+              </ul>
+          </div>
+          <div class="footer-bottom">
+              <p>&copy; 2024 ConstructLink. All rights reserved.</p>
+          </div>
       </div>
       <div class="footer-social">
-        <a href="https://www.linkedin.com/in/dharmesh-kota-8a9810268/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Dharmesh-Kota" class="social-icon"><i class="fab fa-github" target="_blank"></i></a>
-        <a href="https://www.instagram.com/dharmesh.2004/" class="social-icon"><i class="fab fa-instagram" target="_blank"></i></a>
+          <a href="https://www.linkedin.com/in/dharmesh-kota-8a9810268/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Dharmesh-Kota" class="social-icon" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/dharmesh.2004/" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2023 Rodic360. All rights reserved.</p>
-    </div>
-  </footer>
-  
+  </div>
+</footer>
