--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,13 +1,13 @@
 <nav>
-    <div id="title"><img src="/images/RODIC-LOGO.png" alt=""></div>
+    <div id="title">
+        <a href="/"><img src="/images/RODIC-LOGO.png" alt=""></a>
+    </div>
     <div id="menu">
         <button id="menuButton">Menu</button>
         <ul id="menuList">
-            <li><a href="#">Weather</a></li>
             <li><a href="/project/community-engagement">Projects</a></li>
-            <li><a href="/">Home</a></li>
             <% if (locals.user) { %>
-                <li><a href="/"><%=user.username%></a></li>
+                <li><a href="/"><%= user.username %></a></li>
                 <li><a href="/users/sign-out">LOGOUT</a></li>
             <% } else { %>
                 <li><a href="/users/sign-in">Login</a></li>
